--- a/expense_tracker/pubspec.yaml
+++ b/expense_tracker/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.20.2
   google_fonts: ^6.3.2
+  toastification: ^3.0.3
 
 dev_dependencies:
   flutter_test:
